<resources>
    <string name="app_name">BasicUI</string>
    <string name="bottom_naivgation_home">首页</string>
    <!--我的-->
    <string name="bottom_naivgation_me">我的</string>

    <string name="bottom_navigation_utils">工具</string>
    <string name="peakmain">Peakmain</string>
    <string name="github">Github:https://github.com/Peakmain/BasicUI</string>
    <string name="jianshu">简书:https://www.jianshu.com/u/3ff32f5aea98</string>

    <!--dialog-->
    <string name="is_set_width_full">设置宽度全屏</string>
    <string name="is_set_default_animation">添加默认动画</string>
    <string name="is_from_bottom">从底部弹出</string>
    <string name="is_cancelable">点击外部可以取消</string>
    <string name="sure">确定</string>
    <string name="forward">转发</string>
    <string name="save_image">保存图片</string>
    <string name="cancel">取消</string>

    <!--naviagtion-->
    <string name="show_right_arrow">显示右边箭头(默认显示的)</string>
    <string name="set_left_text">设置左边文字为"\"返回\""并设置颜色为white</string>
    <string name="hide_left_text">隐藏左边文字(默认显示)</string>
    <string name="hide_title">隐藏标题</string>
    <string name="alert_background_color">修改背景颜色(自己可以随意设置)</string>
    <string name="show_back_button">显示返回按钮</string>
    <string name="show_toolbar_title">显示toolbar中默认自带的title</string>
    <string name="alert_right_image">修改右边图片资源</string>
    <string name="alert_left_icon">修改左边返回图标</string>
    <string name="test">测试</string>
    <string name="shapetextview1">测试shapeTextView1</string>
    <string name="dialog_loading">以dialog的方式显示loading!</string>
    <string name="compress">压缩</string>
    <string name="custom_left_icon">自定义左边图标</string>

</resources>
