<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_show_right_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:checked="true"
        android:text="@string/show_right_arrow"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_set_left_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/set_left_text"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_hide_left_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/hide_left_text"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_hide_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/hide_title"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />


    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_alert_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/alert_background_color"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_show_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/show_back_button"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_show_toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/show_toolbar_title"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_alert_right_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/alert_right_image"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />


    <com.peakmain.basicui.view.RadioCancelButton
        android:id="@+id/radio_alert_left_back_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:buttonTint="@color/ui_color_01a8e3"
        android:text="@string/alert_left_icon"
        android:textColor="@color/ui_color_4A4A4A"
        tools:targetApi="lollipop" />

    <com.peakmain.ui.widget.ShapeTextView
        android:id="@+id/stv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:padding="@dimen/space_10"
        android:text="@string/sure"
        android:textColor="@color/white"
        app:shapeTvBackgroundColor="@color/ui_color_01a8e3"
        app:shapeTvRadius="@dimen/space_50" />
</LinearLayout>