<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_forword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:text="@string/forward"
        android:textColor="@color/color_4A4A4A"
        android:textSize="@dimen/font_16" />

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="@color/view_line_background"/>

    <TextView
        android:id="@+id/tv_save_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:text="@string/save_image"
        android:textColor="@color/color_4A4A4A"
        android:textSize="@dimen/font_16" />


    <View android:layout_width="match_parent"
        android:layout_height="@dimen/space_6"
        android:background="@color/view_line_background"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:text="@string/cancel"
        android:textColor="@color/color_4A4A4A"
        android:textSize="@dimen/font_16" />
</LinearLayout>